force-app/main/default/objects/Updated_Contacts_From_Pipeline__e/Updated_Contacts_From_Pipeline__e.object-meta.xml
<CustomObject>
    <label>Updated Contacts From Pipeline Event</label>
    <pluralLabel>Updated Contacts From Pipeline Events</pluralLabel>
</CustomObject>