force-app/main/default/objects/Updated_Contacts_From_Pipeline__e/fields/Contact_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record_Id__c</fullName>
    <label>Contact Record Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>