force-app/main/default/objects/Updated_Contacts_From_Pipeline__e/fields/Person_Id__c.field-meta.xml
<CustomField>
    <fullName>Person_Id__c</fullName>
    <label>Person Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>