force-app/main/default/objects/Updated_Contacts_From_Pipeline__e/fields/Updated_First_Volunteer_Date__c.field-meta.xml
<CustomField>
    <fullName>Updated_First_Volunteer_Date__c</fullName>
    <label>Updated First Volunteer Date</label>
    <type>Date</type>
</CustomField>