force-app/main/default/objects/Updated_Contacts_From_Pipeline__e/fields/Updated_Foster_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Updated_Foster_Start_Date__c</fullName>
    <label>Updated Foster Start Date</label>
    <type>Date</type>
</CustomField>