force-app/main/default/objects/Updated_Contacts_From_Pipeline__e/fields/Updated_Recent_Volunteer_Activity__c.field-meta.xml
<CustomField>
    <fullName>Updated_Recent_Volunteer_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated Recent Volunteer Activity</label>
    <type>Checkbox</type>
</CustomField>