force-app/main/default/objects/Updated_Contacts_From_Pipeline__e/fields/Updated_Total_Volunteer_Hours__c.field-meta.xml
<CustomField>
    <fullName>Updated_Total_Volunteer_Hours__c</fullName>
    <label>Updated Total Volunteer Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>