force-app/main/default/objects/Updated_Contacts_From_Pipeline__e/fields/Updated_Volunteer_Status__c.field-meta.xml
<CustomField>
    <fullName>Updated_Volunteer_Status__c</fullName>
    <label>Updated Volunteer Status</label>
    <length>128</length>
    <type>Text</type>
</CustomField>