force-app/main/default/objects/Updated_Contacts_From_Pipeline__e/fields/Volgistics_Id__c.field-meta.xml
<CustomField>
    <fullName>Volgistics_Id__c</fullName>
    <label>Volgistics Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>